--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,29 +7,27 @@ spring.rabbitmq.template.exchange=teamExchange
 spring.rabbitmq.template.routing-key=team.addMember
 spring.rabbitmq.listener.simple.acknowledge-mode=auto
 
+# Application Settings
 spring.application.name=Team-Management-service
 server.port=8080
 
+# Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/teamdb
 spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+
+# JPA & Hibernate Settings
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+# External Service URL
 user.service.url=http://localhost:8082
 
+# Logging Configuration
 logging.level.org.springframework=INFO
-logging.level.com.example=DEBUG
+logging.level.com.fawry=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=2000000
-spring.datasource.hikari.connection-timeout=30000
-
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+# Hikari
