--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,11 @@
-# RabbitMQ Configuration
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.template.exchange=teamExchange
-spring.rabbitmq.template.routing-key=team.addMember
-spring.rabbitmq.listener.simple.acknowledge-mode=auto
-
 # Application Settings
 spring.application.name=Team-Management-service
 server.port=8082
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/teamdb
+spring.datasource.url=jdbc:mysql://localhost:3306/teamdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=password
 
 # JPA & Hibernate Settings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -30,4 +21,3 @@ logging.level.com.fawry=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-# Hikari
