added an endpoint to get the team by the id of one of it's members

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ server.port=8082
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/teamdb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=password
-
+#spring.datasource.username=root
+#spring.datasource.password=password
+spring.datasource.username=ah030223
+spring.datasource.password=Ahmed@030223
 # JPA & Hibernate Settings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
